[project]
name = "verlox"
version = "0.1.0"
description = ""
authors = [
    {name = "ASWIN DAS P V",email = "pvaswindas.dev@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.121.2,<0.122.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
